--- a/.classpath
+++ b/.classpath
@@ -42,5 +42,6 @@
 	<classpathentry kind="lib" path="lib/xalan-2.7.1.jar"/>
 	<classpathentry kind="lib" path="lib/xercesImpl-2.10.0.jar"/>
 	<classpathentry kind="lib" path="lib/xml-apis-1.4.01.jar"/>
+	<classpathentry kind="lib" path="/Users/venkatarama_n/Downloads/apache-commons-lang.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
